Implement authentication via API with Google
