# GameDocumentEngine.Server/Users/UserController.cs
@@ -1,4 +1,5 @@
 ﻿using Json.Patch;
+using System.Security.Claims;
 
 namespace GameDocumentEngine.Server.Users;
 
@@ -6,6 +7,7 @@ public class UserController : Api.UserControllerBase
 {
 	protected override Task<GetCurrentUserActionResult> GetCurrentUser()
 	{
+		var email = User.Claims.FirstOrDefault(c => c.Type == ClaimValueTypes.Email);
 		throw new NotImplementedException();
 	}
 
