# schemas/api.yaml
@@ -6,6 +6,8 @@ paths:
   /user:
     get:
       operationId: getCurrentUser
+      security:
+        - AuthenticatedUser: []
       responses:
         200:
           description: Success
@@ -37,6 +39,21 @@ paths:
                 type: string
         409:
           description: User was updated while request was being processed; try again later.
+  /login:
+    summary: Logs the user in
+    get:
+      operationId: login
+      summary: Logs the user in
+      parameters:
+        - in: query
+          name: returnUrl
+          schema:
+            type: string
+            pattern: "^/[^/].*"
+          required: false
+      responses:
+        302:
+          description: Redirects to login url
   /game:
     post:
       operationId: createGame
@@ -225,6 +242,12 @@ paths:
         409:
           description: Document was updated while request was being processed; try again later.
 components:
+  securitySchemes:
+    AuthenticatedUser:
+      type: apiKey
+      in: cookie
+      name: .AspNetCore.Cookies
+
   schemas:
     EditableGameDetails:
       type: object
@@ -267,3 +290,7 @@ components:
       properties:
         name:
           type: string
+
+  responses:
+    "401":
+      description: User was not authenticated
